Arreglado scroll de la lista

--- a/public/index.html
+++ b/public/index.html
@@ -85,7 +85,7 @@
                   </div>
                 </md-toolbar>
 
-                <md-content flex  md-scroll-shrink>
+                <md-content flex style="overflow: scroll;">
 
                   <md-list>
 
