--- a/public/index.html
+++ b/public/index.html
@@ -148,6 +148,10 @@
                     <md-divider inset></md-divider>
                   </md-list-item>
                 </div>
+                  
+                <div id="fb-root"></div>
+                <div class="fb-comments" data-href="{{fbhref}}" data-numposts="5"></div>    
+                <script src="controllers/fb.js"></script>
 
             </div>
               
