Agregado zoom al clickear el marker o lista, comentarios especificos de fb al clickear la lista, fix de markers no andando, logs comentados, hay duplicacion de codigo en un metodo, se debe arreglar

--- a/public/index.html
+++ b/public/index.html
@@ -89,13 +89,13 @@
 
                     <md-list id="markerlist" class="make-scrollable" flex>
 
-                      <md-list-item class="md-3-line" ng-repeat="marker in markerApplist |  orderBy:'name' | filter:filter" ng-click="mostrarLugar()">
+                      <md-list-item class="md-3-line" ng-repeat="marker in markerApplist |  orderBy:'name' | filter:filter" ng-click="mostrarLugar(marker)">
                         <div class="md-list-item-text">
                           <h3>Nombre: {{ marker.name }}</h3>
-                          <h4>ID:{{ marker.id }}</h4>
+                          <h4>ID:{{ marker._id }}</h4>
                           <h4>Lugar: {{ marker.vicinity }}</h4>
-                          <h4>Lat: {{ marker.geometry.location.lat() }}</h4>
-                          <h4>Lng: {{ marker.geometry.location.lng() }}</h4>
+                          <h4>Lat: {{ marker.lat }}</h4>
+                          <h4>Lng: {{ marker.lng }}</h4>
                           <!--<p>{{ marker.descrip }}</p>-->
                         </div>
                         <md-divider inset></md-divider>
@@ -110,7 +110,7 @@
                 <!--Mapa-->
                 <div flex="66" class="map-container">
                   <ng-map zoom="10" center="-38.70, -62.27" id="map">
-                    <marker ng-repeat="marker in markerlist" position="{{ marker.geometry.location.lat() }}, {{ marker.geometry.location.lng() }}"  on-click="mostrarLugar()"></marker>
+                    <marker ng-repeat="m in markerApplist" position="{{ m.lat }}, {{ m.lng }}"  on-click="mostrarLugarMarker(m)"></marker>
                   </ng-map>
                 </div>
               </div> 
@@ -371,7 +371,7 @@
       <!--Angular-Material-->
       <script src="/modules/angular-material/angular-material.min.js"></script>
       <!--Google Maps-->
-       <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyBxyHC8GitQ_5rhh_7tifUMA9w24GAk96I&libraries=places"></script>
+       <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyD9-l3hDNOymPxrLsQOosvOsXMvvCgRrjg&libraries=places"></script>
 <!--      <script src="https://maps.google.com/maps/api/js"></script>-->
       <!--Directivas ng-maps-->
       <script src="/modules/ngmap/build/scripts/ng-map.min.js"></script>
