Admin logic: descripcion

--- a/public/index.html
+++ b/public/index.html
@@ -343,7 +343,7 @@
                           <td md-cell>
                             <md-input-container class="md-block" flex>
                               <label>Descripción</label>
-                              <textarea name="f_mkr_g_desc" class="form-control form-control-estilo2"></textarea>
+                              <textarea name="f_mkr_g_desc" class="form-control form-control-estilo2" ng-model="marker_g.description"></textarea>
                             </md-input-container>
                           </td>                          
                           <td md-cell>
