--- a/public/readme.html
+++ b/public/readme.html
@@ -1,29 +1,72 @@
 
-Proyecto 3: MEAN Stack
-IAW 2017
-Autores: Iñaki Barreix y Juan Ignacio Cangelosi
+  <h2>INGENIERÍA DE APLICACIONES WEB Primer cuatrimestre de 2017 Departamento de Ciencias e Ingeniería de la Computación - Universidad Nacional del Sur</h2>
 
-Tema elegido: Cajeros automaticos (ATM)
+  <h2>Comisión 707:</h2>
+  <ul>
+      <li> Barreix Iñaki 108998  </li>
+      <li> Cangelosi Juan Ignacio 107573.</li>
+  </ul>
 
-Acceso Administrador:
-La cuenta de administrador será:
+  <h2>Entrega Proyecto 3: MEAN Stack, tema elegido: Cajeros automaticos (ATM)</h2>
 
-User: admin
-Pass: admin
+  <h2>Acceso Administrador:</h2>
+  <h3>La cuenta de administrador será:</h3>
+  <ul>
+      <li> <strong>user:</strong> admin  </li>
+          <li> <strong>pass:</strong> admin</li>
+  </ul>
+  <p><strong>
+  Al montar la aplicacion esta cuenta no estará disponible, pero al entrar a la pagina/setup (una direcion que tiene el objetivo de cargar la cuenta de administrador solo con intenciones de testing) se creará esta cuenta.
+  </strong></p>
 
-Al montar la aplicacion esta cuenta no estará disponible, pero al entrar a la pagina/setup (una direcion que tiene el objetivo de cargar la cuenta de administrador solo con intenciones de testing) se creará esta cuenta.
+  <h1>Endpoints:</h1>
+  <p>
+  Los endpoints abiertos para su uso pedidos por la consigna seran:
 
-Endpoints:
+  </p>
+  <ul>
+      <ul>
+         <li>/markerapplist  Retornará todos la informacion de todos los lugares del sistema.</li>
+         <li>/markerapplist/id Retornará toda la informacion de un lugar con el id especificado</li>
+         <li>/placeslist Retornará una lista de lugares con su ubicacion (calle y ciudad)</li>
+      </ul>
+  </ul>
 
-Los endpoints abiertos para su uso pedidos por la consigna seran:
+  <h1>Notas del proyecto:</h1>
+  <ul>
+      <ul>
+         <li>No se comprendió muy bien esta parte de la consigna:<strong>"Mostrar lugares o características relacionadas cargadas en el sistema, ya sea indicadas explícitamente o relacionadas por palabras clave, o incorporadas a partir de uno o más servicios web."</strong>
+  Por lo tanto se asumio que se refería a la busqueda de los cajeros, que se obtienen de la api de google places."
+  </li>
+         <li>El proyecto se desarrollo en una sola pagina(html) con la esperanza de separa las secciones de pagina, pero a falta de tiempo se eligió por terminar los objetivos del negocio del proyecto y dejar dicho objetivo en futuras implmentaciones de uso. </li>
 
-- /markerapplist  Retornará todos la informacion de todos los lugares del sistema
-- /markerapplist/id Retornará toda la informacion de un lugar con el id especificado
-- /placeslist Retornará una lista de lugares con su ubicacion (calle y ciudad).
+      </ul>
+  </ul>
 
-Notas del proyecto:
-No se comprendió muy bien esta parte de la consigna:
-"Mostrar lugares o características relacionadas cargadas en el sistema, ya sea indicadas explícitamente o relacionadas por palabras clave, o incorporadas a partir de uno o más servicios web."
-Por lo tanto se asumio que se refería a la busqueda de los cajeros, que se obtienen de la api de google places.
+  <h3>Css usados:</h3>
+  <ul>
+     <li><a href="http://fontawesome.io/">Font awesome</a></li>
+     <li><a href="https://material.io/icons/">Material icon</a></li>
+  </ul>
 
+  <h3>Dependencias usadas:</h3>
+  <ul>
+     <li><a href="https://angularjs.org/">AngularJS (angular, animate, aria, messages)</a></li>
+     <li><a href="https://material.angularjs.org/latest/">Angular Material</a></li>
+     <li><a href="https://www.npmjs.com/package/body-parser">Body-parser</a></li>
+     <li><a href="http://expressjs.com/es/">expressJS</a></li>
+     <li><a href="https://nodejs.org/en/">nodeJS</a></li>
+     <li><a href="https://jquery.com//">jquery</a></li>
+     <li><a href="https://www.mongodb.com/es">MongoDB</a></li>
+     <li><a href="https://www.npmjs.com/package/md5/">md5</a></li>
+     <li><a href="http://mongoosejs.com/">Moongose</a></li>
+     <li><a href="https://ngmap.github.io/">ngmap</a></li>
+  </ul>
+
+<h3>Credits</h3>
+  <ul>
+    <li><a href="https://www.youtube.com/channel/UC8Szh5ZJeGFBWyqKyTCVPpA">Learn Coding Tutorials</a></li>
+    <li><a href="https://www.youtube.com/channel/UCW5YeuERMmlnqo4oq8vwUpg">The Net Ninja</a></li>
+    <li><a href="https://stackoverflow.com/">A toda la comunidad de stackoverflow</a></li>
+  </ul>
 
