--- a/public/index.html
+++ b/public/index.html
@@ -499,7 +499,118 @@
           </div>
         </md-tab>
         <md-tab label="ReadMe">
-          <p>Integer turpis erat, porttitor vitae mi faucibus, laoreet interdum tellus. Curabitur posuere molestie dictum. Morbi eget congue risus, quis rhoncus quam. Suspendisse vitae hendrerit erat, at posuere mi. Cras eu fermentum nunc. Sed id ante eu orci commodo volutpat non ac est. Praesent ligula diam, congue eu enim scelerisque, finibus commodo lectus.</p>
+          <div layout-wrap>
+              <div layout-gt-sm="row" layout-align="center"> 
+                <main>
+                  <h1 class="md-display-3">
+                      <strong>About SPYGLASS</strong>
+                  </h1>
+                </main>
+              </div>
+              <div layout-gt-sm="row" layout="column" layout-padding>
+                <main flex>
+                  <h2 class="md-display-2">
+                    <strong>Ingeniería de Aplicaciones Web (2017) Proyecto 3 </strong>: MEAN Stack IAW 2017</h2>
+                  <h2><strong>Tema elegido: </strong>Cajeros automaticos (ATM).</h2>
+
+                  <h1><strong>Autores:</strong></h1>               
+                </main>
+              </div> 
+              <div layout-gt-sm="row" layout="column" layout-align="space-around" layout-wrap>
+
+                <md-card class="carta">
+                  <img src="../img/team/01.jpg" class="md-card-image" alt="Iñaki Barreix">
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline"><strong>Iñaki Barreix</strong></span>
+                    </md-card-title-text>
+                  </md-card-title>
+                  <md-card-actions layout="row" layout-align="space-around">
+                    <md-button href="https://twitter.com/isbarreix" aria-label="twitter"><md-icon class="fa fa-twitter iconcard"></md-icon></md-button>
+                    <md-button href="https://www.facebook.com/isbarreix" aria-label="facebook"><md-icon class="fa fa-facebook iconcard"></md-icon></md-button>
+                    <md-button href="https://github.com/isbarreix" aria-label="github"><md-icon class="fa fa-github iconcard"></md-icon></md-button>
+                  </md-card-actions>
+                </md-card>
+                <md-card class="carta">
+                  <img src="../img/team/02.jpg" class="md-card-image" alt="Juan Ignacio Cangelosi">
+                  <md-card-title>
+                    <md-card-title-text>
+                      <span class="md-headline"><strong>Juan Ignacio Cangelosi</strong></span>
+                    </md-card-title-text>
+                  </md-card-title>
+
+                  <md-card-actions layout="row" layout-align="space-around">
+                    <md-button href="https://twitter.com/juanic95" aria-label="twitter"><md-icon class="fa fa-twitter iconcard"></md-icon></md-button>
+                    <md-button href="https://www.facebook.com/juanicange" aria-label="facebook"><md-icon class="fa fa-facebook iconcard"></md-icon></md-button>
+                    <md-button href="https://github.com/JuanCangelosi" aria-label="github"><md-icon class="fa fa-github iconcard"></md-icon></md-button>
+
+                  </md-card-actions>
+                </md-card>
+              </div>
+               <div layout-margin>
+                  <h2>Acceso Administrador:</h2>
+                  <h3>La cuenta de administrador será:</h3>
+                  <ul>
+                      <li> <strong>user:</strong> admin  </li>
+                          <li> <strong>pass:</strong> admin</li>
+                  </ul>
+                  <p><strong>
+                  Al montar la aplicacion esta cuenta no estará disponible, pero al entrar a la pagina/setup (una direcion que tiene el objetivo de cargar la cuenta de administrador solo con intenciones de testing) se creará esta cuenta.
+                  </strong></p>
+
+                  <h1>Endpoints:</h1>
+                  <p>
+                  Los endpoints abiertos para su uso pedidos por la consigna seran:
+
+                  </p>
+                  <ul>
+                      <ul>
+                         <li>/markerapplist  Retornará todos la informacion de todos los lugares del sistema.</li>
+                         <li>/markerapplist/id Retornará toda la informacion de un lugar con el id especificado</li>
+                         <li>/placeslist Retornará una lista de lugares con su ubicacion (calle y ciudad)</li>
+                      </ul>
+                  </ul>
+
+                  <h1>Notas del proyecto:</h1>
+                  <ul>
+                      <ul>
+                         <li>No se comprendió muy bien esta parte de la consigna:<strong>"Mostrar lugares o características relacionadas cargadas en el sistema, ya sea indicadas explícitamente o relacionadas por palabras clave, o incorporadas a partir de uno o más servicios web."</strong>
+                  Por lo tanto se asumio que se refería a la busqueda de los cajeros, que se obtienen de la api de google places."
+                  </li>
+                         <li>El proyecto se desarrollo en una sola pagina(html) con la esperanza de separa las secciones de pagina, pero a falta de tiempo se eligió por terminar los objetivos del negocio del proyecto y dejar dicho objetivo en futuras implmentaciones de uso. </li>
+
+                      </ul>
+                  </ul>
+
+                  <h3>Css usados:</h3>
+                  <ul>
+                     <li><a href="http://fontawesome.io/">Font awesome</a></li>
+                     <li><a href="https://material.io/icons/">Material icon</a></li>
+                  </ul>
+
+                  <h3>Dependencias usadas:</h3>
+                  <ul>
+                     <li><a href="https://angularjs.org/">AngularJS (angular, animate, aria, messages)</a></li>
+                     <li><a href="https://material.angularjs.org/latest/">Angular Material</a></li>
+                     <li><a href="https://www.npmjs.com/package/body-parser">Body-parser</a></li>
+                     <li><a href="http://expressjs.com/es/">expressJS</a></li>
+                     <li><a href="https://nodejs.org/en/">nodeJS</a></li>
+                     <li><a href="https://jquery.com//">jquery</a></li>
+                     <li><a href="https://www.mongodb.com/es">MongoDB</a></li>
+                     <li><a href="https://www.npmjs.com/package/md5/">md5</a></li>
+                     <li><a href="http://mongoosejs.com/">Moongose</a></li>
+                     <li><a href="https://ngmap.github.io/">ngmap</a></li>
+                  </ul>
+
+                <h3>Credits</h3>
+                  <ul>
+                    <li><a href="https://www.youtube.com/channel/UC8Szh5ZJeGFBWyqKyTCVPpA">Learn Coding Tutorials</a></li>
+                    <li><a href="https://www.youtube.com/channel/UCW5YeuERMmlnqo4oq8vwUpg">The Net Ninja</a></li>
+                    <li><a href="https://stackoverflow.com/">A toda la comunidad de stackoverflow</a></li>
+                  </ul>
+              </div> 
+              
+            </div>
         </md-tab>
       </md-tabs>
      
