Limpieza de codigo

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
       <md-tabs md-dynamic-height="" md-border-bottom="">
         <!--Page 1 Home-->
         <md-tab label="Home">
-          <div ng-controller="TabOneCtrl">
+          <div>
             <div layout-wrap id="div_surf">
               <img id="img_surf" src="../img/plantilla01.png"/>
             </div> 
